# advent-of-code

./: .gitignore  Cargo.toml  README.md  bacon.toml
2023/: Cargo.toml  README.md
2023/advent-derive/: Cargo.toml
2023/advent-derive/src/: lib.rs
2023/advent-puzzles/: Cargo.toml
2023/advent-puzzles/example_day/: expected.toml
2023/advent-puzzles/src/: lib.rs
2023/advent-puzzles/src/2021/day3/: mod.rs
2023/advent-puzzles/src/2021/day4/: mod.rs
2023/advent-puzzles/src/2023/day1/: expected.toml
2023/advent-puzzles/src/2023/day12/: expected.toml  mod.rs
2023/advent-puzzles/src/2023/day15/: mod.rs
2023/advent-puzzles/src/2023/day16/: mod.rs
2023/advent-puzzles/src/2023/day17/: mod.rs
2023/advent-puzzles/src/2023/day18/: mod.rs
2023/advent-puzzles/src/2023/day19/: mod.rs
2023/advent-puzzles/src/2023/day2/: mod.rs
2023/advent-puzzles/src/2023/day20/: mod.rs
2023/advent-puzzles/src/2023/day21/: mod.rs
2023/advent-puzzles/src/2023/day22/: mod.rs
2023/advent-puzzles/src/2023/day23/: mod.rs
2023/advent-puzzles/src/2023/day24/: mod.rs
2023/advent-puzzles/src/2023/day25/: mod.rs
2023/advent-puzzles/src/2023/day4/: mod.rs
2023/advent-puzzles/src/2023/day7/: mod.rs
2023/advent-puzzles/src/2025/day1/: mod.rs
2023/advent-puzzles/src/2025/day10/: expected.toml  mod.rs
2023/advent-puzzles/src/2025/day11/: expected.toml  mod.rs
2023/advent-puzzles/src/2025/day12/: expected.toml  mod.rs
2023/advent-puzzles/src/2025/day2/: expected.toml  mod.rs
2023/advent-puzzles/src/2025/day3/: expected.toml  mod.rs
2023/advent-puzzles/src/2025/day4/: expected.toml  mod.rs
2023/advent-puzzles/src/2025/day5/: expected.toml  mod.rs
2023/advent-puzzles/src/2025/day6/: expected.toml  mod.rs
2023/advent-puzzles/src/2025/day7/: expected.toml  mod.rs
2023/advent-puzzles/src/2025/day8/: expected.toml  mod.rs
2023/advent-puzzles/src/2025/day9/: expected.toml  mod.rs
2023/advent-puzzles/src/utils/: counter.rs  map.rs  math.rs  memoize.rs  mod.rs  parsing.rs  point.rs  point_3d.rs
2023/src/: main.rs
2024/: go.mod
2024/days/day01/: part1.go
2024/days/day02/: part1.go  part2.go
2024/days/day05/: part1.go
2024/days/day06/: part2.go
2024/days/day07/: part1.go  part2.go
2024/days/day08/: part1.go  part2.go
2025/: .eslintrc.json  AGENT.md  README.md  package.json  tsconfig.json
2025/scripts/: new.ts  test.ts
2025/src/: runner.ts  template.ts
advent-derive/: Cargo.toml
advent-derive/src/: lib.rs
advent-puzzles/: Cargo.toml
advent-puzzles/src/: lib.rs
advent-puzzles/src/2021/day1/: mod.rs
advent-puzzles/src/2021/day2/: mod.rs
advent-puzzles/src/2021/day4/: mod.rs
advent-puzzles/src/2023/day1/: mod.rs
advent-puzzles/src/2023/day10/: mod.rs
advent-puzzles/src/2023/day11/: mod.rs
advent-puzzles/src/2023/day12/: mod.rs
advent-puzzles/src/2023/day13/: mod.rs
advent-puzzles/src/2023/day14/: mod.rs
advent-puzzles/src/2023/day17/: input.txt  mod.rs  test_input.txt
advent-puzzles/src/2023/day19/: mod.rs
advent-puzzles/src/2023/day20/: mod.rs
advent-puzzles/src/2023/day23/: mod.rs
advent-puzzles/src/2023/day3/: mod.rs
advent-puzzles/src/2023/day5/: mod.rs
advent-puzzles/src/2023/day6/: mod.rs
advent-puzzles/src/2023/day9/: mod.rs
advent-puzzles/src/utils/: direction.rs  map.rs  mod.rs  point.rs  point_3d.rs
go/: go.sum  main.go
rust/: Cargo.toml  formula.smt2
rust/advent-puzzles/: Cargo.toml
rust/advent-puzzles/example_day/: mod.rs
rust/advent-puzzles/src/: lib.rs
rust/advent-puzzles/src/2021/: mod.rs
rust/advent-puzzles/src/2021/day2/: mod.rs
rust/advent-puzzles/src/2023/day10/: mod.rs
rust/advent-puzzles/src/2023/day24/: mod.rs
rust/advent-puzzles/src/2023/day25/: mod.rs
rust/advent-puzzles/src/2023/day4/: mod.rs
rust/advent-puzzles/src/2023/day6/: mod.rs
rust/advent-puzzles/src/2023/day8/: mod.rs
src/: main.rs
(+67 files in other folders)
