[package]
name = "advent-puzzles"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "advent_puzzles"

[dependencies]
advent-derive = { path = "../advent-derive" }
iterslide = "1.0.1"
itertools = "0.11.0"
thiserror = "1.0.48"

