[package]
name = "advent-puzzles"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "advent_puzzles"

[dependencies]
advent-derive = { path = "../advent-derive" }
iterslide = "1.0.1"
itertools = "0.11.0"
nom = "7.1.3"
strum = { version = "0.25.0", features = ["strum_macros", "derive"] }
strum_macros = "0.25.3"
thiserror = "1.0.48"

