[package]
name = "advent-of-code"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.3.21", features = ["derive"] }
advent-derive = { path = "./advent-derive" }
advent-puzzles = { path = "./advent-puzzles" }
chrono = "0.4.26"
thiserror = "1.0.48"
criterion = "0.5.1"
