[package]
name = "advent-derive"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "advent_derive"
proc-macro = true

[dependencies]
inventory = "0.3"
proc-macro2 = "*"
quote = "*"
syn = { version = "*", features = ["extra-traits", "full"] }
