[package]
name = "advent-puzzles"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "advent_puzzles"

[dependencies]
advent-derive = { path = "../advent-derive" }
array2d = "0.3.0"
colored = "2.1.0"
indicatif = { version = "0.17.7", features = ["rayon"] }
inventory = "0.3"
iterslide = "1.0.1"
itertools = "0.11.0"
nalgebra = "0.32.3"
nom = "7.1.3"
nom-supreme = "0.8.0"
num = "0.4.1"
pathfinding = "4.6.0"
petgraph = "0.6.4"
rayon = "1.8.0"
regex = "1.10"
serde = { version = "1.0", features = ["derive"] }
strum = { version = "0.25.0", features = ["derive", "strum_macros"] }
strum_macros = "0.25.3"
thiserror = "1.0.48"
toml = "0.8"

[dev-dependencies]
rstest = "0.18.2"
